# trump-company-tracker

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: blacklist.yaml  company_aliases.yaml  sources.yaml  trump_trades.yaml
data/processed/: translations.json  truth_state.json  whitehouse_state.json
data/raw/manual_texts/: dell_mothersday_2026-05-08.txt  tsmc_whitehouse_2025-03-03.txt
notebooks/: exploration.ipynb
outputs/: report.md  trump_company_mentions.csv  trump_company_mentions.jsonl
src/: __init__.py  build_site.py  config.py  dedupe.py  enrich_tickers.py  extract_mentions.py  fetch_sources.py  fetch_truth_social.py  fetch_whitehouse.py  generate_report.py  models.py  normalize_companies.py  pipeline.py  score_relevance.py  trades.py  translate.py
tests/: test_dedupe.py  test_fetch_truth_social.py  test_fetch_whitehouse.py  test_normalize_companies.py  test_scoring.py  test_trades.py  test_translate.py
